--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -27,6 +27,8 @@
 		<!-- Select2 (for tag autocomplete) -->
 		<link href="{% static 'js/select2/css/select2.min.css' %}" rel="stylesheet" />
 		<script src="{% static 'js/select2/js/select2.min.js' %}"></script>
+		<!-- Charts.js for Dashboard -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
 	</head>
 	<body data-spy="scroll" data-target="#fixed-nav">
 		<nav class="navbar navbar-default navbar-fixed-top">
